STYLE: main grid

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 
     <body>
         <div>
+            <div>
+                <div>
+                    <label for=""><input type="checkbox" /></label
+                    ><label for=""><input type="checkbox" /></label
+                    ><label for=""><input type="checkbox" /></label
+                    ><label for=""><input type="checkbox" /></label>
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
             <img src="./assets/svgs/psp-foreground.svg" />
         </div>
     </body>
