STYLE: added and styled analog-side buttons

--- a/index.html
+++ b/index.html
@@ -10,14 +10,57 @@
     <body>
         <div>
             <div>
+                <!-- d-pad -->
                 <div>
-                    <label for=""><input type="checkbox" /></label
-                    ><label for=""><input type="checkbox" /></label
-                    ><label for=""><input type="checkbox" /></label
-                    ><label for=""><input type="checkbox" /></label>
+                    <label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox"
+                    /></label>
                 </div>
+                <!-- screen -->
                 <div></div>
-                <div></div>
+                <!-- analog -->
+                <div>
+                    <label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox" /></label
+                    ><label for="analog-stick"
+                        ><input
+                            name="analog-stick"
+                            data-type="analog-stick"
+                            type="checkbox"
+                    /></label>
+                </div>
+                <!-- bottom bar -->
                 <div></div>
             </div>
             <img src="./assets/svgs/psp-foreground.svg" />
