STYLE: styled the analog buttons and set up the grid for the right side of the console

--- a/index.html
+++ b/index.html
@@ -12,53 +12,54 @@
             <div>
                 <!-- d-pad -->
                 <div>
-                    <label for="analog-stick"
+                    <label for="d-pad"
                         ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
+                            name="d-pad"
+                            data-type="d-pad"
                             type="checkbox" /></label
-                    ><label for="analog-stick"
+                    ><label for="d-pad"
                         ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
+                            name="d-pad"
+                            data-type="d-pad"
                             type="checkbox" /></label
-                    ><label for="analog-stick"
+                    ><label for="d-pad"
                         ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
+                            name="d-pad"
+                            data-type="d-pad"
                             type="checkbox" /></label
-                    ><label for="analog-stick"
-                        ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
-                            type="checkbox"
+                    ><label for="d-pad"
+                        ><input name="d-pad" data-type="d-pad" type="checkbox"
                     /></label>
                 </div>
                 <!-- screen -->
                 <div></div>
                 <!-- analog -->
                 <div>
-                    <label for="analog-stick"
-                        ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
-                            type="checkbox" /></label
-                    ><label for="analog-stick"
-                        ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
-                            type="checkbox" /></label
-                    ><label for="analog-stick"
-                        ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
-                            type="checkbox" /></label
-                    ><label for="analog-stick"
-                        ><input
-                            name="analog-stick"
-                            data-type="analog-stick"
-                            type="checkbox"
-                    /></label>
+                    <div></div>
+                    <div>
+                        <label for="analog-stick"
+                            ><input
+                                name="analog-stick"
+                                data-type="analog-stick"
+                                type="checkbox" /></label
+                        ><label for="analog-stick"
+                            ><input
+                                name="analog-stick"
+                                data-type="analog-stick"
+                                type="checkbox" /></label
+                        ><label for="analog-stick"
+                            ><input
+                                name="analog-stick"
+                                data-type="analog-stick"
+                                type="checkbox" /></label
+                        ><label for="analog-stick"
+                            ><input
+                                name="analog-stick"
+                                data-type="analog-stick"
+                                type="checkbox"
+                        /></label>
+                    </div>
+                    <div></div>
                 </div>
                 <!-- bottom bar -->
                 <div></div>
