STYLE: starting on power/hold buttons

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
                                 type="checkbox"
                         /></label>
                     </div>
-                    <div></div>
+                    <!-- hold and power on buttons -->
+                    <div>
+                        <!-- <label for="">Power<input type="radio" /></label>
+                        <label for="">Hold<input type="radio" /></label> -->
+                    </div>
                 </div>
                 <!-- bottom bar -->
                 <div></div>
