STYLE: presssing power on button turns on the hold button

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                     </div>
                     <!-- hold and power on buttons -->
                     <div>
-                        <!-- <label for="">Power<input type="radio" /></label>
-                        <label for="">Hold<input type="radio" /></label> -->
+                        <label for="power">Power<input type="checkbox" /></label>
+                        <label for="power"
+                            >Hold<input checked  type="radio"
+                        /></label>
                     </div>
                 </div>
                 <!-- bottom bar -->
