STYLE: power/hold lights turn on

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div>
                 <!-- d-pad -->
                 <div>
-                    <label for="d-pad"
+                    <!-- <label for="d-pad"
                         ><input
                             name="d-pad"
                             data-type="d-pad"
@@ -29,7 +29,7 @@
                             type="checkbox" /></label
                     ><label for="d-pad"
                         ><input name="d-pad" data-type="d-pad" type="checkbox"
-                    /></label>
+                    /></label> -->
                 </div>
                 <!-- screen -->
                 <div></div>
