STYLE: something happens when you turn the screen on

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     /></label> -->
                 </div>
                 <!-- screen -->
-                <div></div>
+                <div data-element="screen"></div>
                 <!-- analog -->
                 <div>
                     <div></div>
@@ -61,9 +61,11 @@
                     </div>
                     <!-- hold and power on buttons -->
                     <div>
-                        <label for="power">Power<input type="checkbox" /></label>
+                        <label data-element="power-button" for="power"
+                            >Power<input type="checkbox"
+                        /></label>
                         <label for="power"
-                            >Hold<input checked  type="radio"
+                            >Hold<input checked type="radio"
                         /></label>
                     </div>
                 </div>
