STYLE: beginning to set up the d-pad

--- a/index.html
+++ b/index.html
@@ -12,30 +12,52 @@
             <div>
                 <!-- d-pad -->
                 <div>
-                    <!-- <label for="d-pad"
-                        ><input
-                            name="d-pad"
-                            data-type="d-pad"
-                            type="checkbox" /></label
-                    ><label for="d-pad"
-                        ><input
-                            name="d-pad"
-                            data-type="d-pad"
-                            type="checkbox" /></label
-                    ><label for="d-pad"
-                        ><input
-                            name="d-pad"
-                            data-type="d-pad"
-                            type="checkbox" /></label
-                    ><label for="d-pad"
-                        ><input name="d-pad" data-type="d-pad" type="checkbox"
-                    /></label> -->
+                    <!-- psp logo -->
+                    <div></div>
+                    <!-- d-pad itself -->
+                    <div>
+                        <label for="d-pad"
+                            ><input
+                                name="d-pad"
+                                data-type="d-pad"
+                                type="checkbox"
+                            />
+                        </label>
+                        <label for="d-pad">
+                            <input
+                                name="d-pad"
+                                data-type="d-pad"
+                                type="checkbox"
+                            />
+                        </label>
+                        <label for="d-pad">
+                            <input
+                                name="d-pad"
+                                data-type="d-pad"
+                                type="checkbox"
+                            />
+                        </label>
+                        <label for="d-pad">
+                            <input
+                                name="d-pad"
+                                data-type="d-pad"
+                                type="checkbox"
+                            />
+                        </label>
+                    </div>
+                    <!-- stick -->
+                    <div></div>
                 </div>
                 <!-- screen -->
                 <div data-element="screen"></div>
                 <!-- analog -->
                 <div>
-                    <div></div>
+                    <div>
+                        <!-- <img
+                            src="./assets/svgs/sony-logo.svg"
+                            alt="Sony logo"
+                        /> -->
+                    </div>
                     <div>
                         <label for="analog-stick"
                             ><input
@@ -61,8 +83,9 @@
                     </div>
                     <!-- hold and power on buttons -->
                     <div>
+                        <!-- ? ID usage ok? -->
                         <label data-element="power-button" for="power"
-                            >Power<input type="checkbox"
+                            >Power<input id="power" type="checkbox"
                         /></label>
                         <label for="power"
                             >Hold<input checked type="radio"
