STYLE: CSS nesting applied to most of code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <div></div>
                 </div>
                 <!-- screen -->
-                <div data-element="screen"></div>
+                <div data-element="screen">
+                    <h1>PSP to the Rescue</h1>
+                </div>
                 <!-- analog -->
                 <div>
                     <div>
@@ -95,6 +97,8 @@
                 <!-- bottom bar -->
                 <div></div>
             </div>
+            <!-- style the extra buttons like this -->
+            <!-- <div style="width: 20px; height: 20px; background: red;"></div> -->
             <img src="./assets/svgs/psp-foreground.svg" />
         </div>
     </body>
