STYLE: displays bg image on startup, started on left/right buttons in corners

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 <!-- analog -->
                 <div>
                     <div>
-                        <!-- <img
+                        <img
                             src="./assets/svgs/sony-logo.svg"
                             alt="Sony logo"
-                        /> -->
+                        />
                     </div>
                     <div>
                         <label for="analog-stick"
@@ -100,6 +100,9 @@
             <!-- style the extra buttons like this -->
             <!-- <div style="width: 20px; height: 20px; background: red;"></div> -->
             <img src="./assets/svgs/psp-foreground.svg" />
+            <div data-element="L"></div>
+            <div data-element="R"></div>
+
         </div>
     </body>
 </html>
