STYLE: added right/left buttons

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 <!-- screen -->
                 <div data-element="screen">
                     <h1>PSP to the Rescue</h1>
+                    <!-- <div data-element="mario">
+                        <img style="width: 30px;" src="./assets/images/super-mario-bros-3/super-mario-bros-3-walk.gif" alt="">
+                    </div> -->
                 </div>
                 <!-- analog -->
                 <div>
@@ -85,7 +88,6 @@
                     </div>
                     <!-- hold and power on buttons -->
                     <div>
-                        <!-- ? ID usage ok? -->
                         <label data-element="power-button" for="power"
                             >Power<input id="power" type="checkbox"
                         /></label>
@@ -102,7 +104,6 @@
             <img src="./assets/svgs/psp-foreground.svg" />
             <div data-element="L"></div>
             <div data-element="R"></div>
-
         </div>
     </body>
 </html>
