STYLE: added popup, RESPONSIVE

--- a/index.html
+++ b/index.html
@@ -105,5 +105,8 @@
             <div data-element="L"></div>
             <div data-element="R"></div>
         </div>
+        <div data-element="popup">
+            Please rotate your phone to landscape to use this PSP properly!
+        </div>
     </body>
 </html>
