--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div>
+        <div id="psp" data-element="psp">
             <div>
                 <!-- d-pad -->
                 <div>
