STYLE: mario added as bg img, made absolute to screen

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
                 <!-- screen -->
                 <div data-element="screen">
                     <h1>PSP to the Rescue</h1>
-                    <!-- <div data-element="mario">
-                        <img style="width: 30px;" src="./assets/images/super-mario-bros-3/super-mario-bros-3-walk.gif" alt="">
-                    </div> -->
+                    <div data-element="mario-walking">
+                        <!-- <img
+                            style="width: 30px"
+                            src="./assets/images/super-mario-bros-3/super-mario-bros-3-walk.gif"
+                            alt=""
+                        /> -->
+                    </div>
                 </div>
                 <!-- analog -->
                 <div>
