STYLE: added style queries for on/off and took out data attributes (oops)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <div id="psp" data-element="psp">
+        <div>
             <div>
                 <!-- d-pad -->
                 <div>
@@ -49,15 +49,9 @@
                     <div></div>
                 </div>
                 <!-- screen -->
-                <div data-element="screen">
+                <div>
                     <h1>PSP to the Rescue</h1>
-                    <div data-element="mario-walking">
-                        <!-- <img
-                            style="width: 30px"
-                            src="./assets/images/super-mario-bros-3/super-mario-bros-3-walk.gif"
-                            alt=""
-                        /> -->
-                    </div>
+                    <div></div>
                 </div>
                 <!-- analog -->
                 <div>
@@ -92,9 +86,7 @@
                     </div>
                     <!-- hold and power on buttons -->
                     <div>
-                        <label data-element="power-button" for="power"
-                            >Power<input id="power" type="checkbox"
-                        /></label>
+                        <label>Power<input type="checkbox" /></label>
                         <label for="power"
                             >Hold<input checked type="radio"
                         /></label>
@@ -104,12 +96,11 @@
                 <div></div>
             </div>
             <!-- style the extra buttons like this -->
-            <!-- <div style="width: 20px; height: 20px; background: red;"></div> -->
             <img src="./assets/svgs/psp-foreground.svg" />
-            <div data-element="L"></div>
-            <div data-element="R"></div>
+            <div></div>
+            <div></div>
         </div>
-        <div data-element="popup">
+        <div>
             Please rotate your phone to landscape to use this PSP properly!
         </div>
     </body>
