STYLE: added PSP logo and super mario effect

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <!-- bottom bar -->
-                <div></div>
+                <div><img src="./assets/svgs/psp-logo.svg" alt="PSP logo"></div>
             </div>
             <!-- style the extra buttons like this -->
             <img src="./assets/svgs/psp-foreground.svg" />
